moving API to ENV_VARS

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
         <meta http-equiv="Cache-control" content="no-cache" />
-        <meta application-name="Mailchimp Subscribers" data-allows-resizing="NO" data-default-size="4,4" data-allows-scrolling="NO" />
+        <meta application-name="<%= settings.title %>" data-allows-resizing="NO" data-default-size="4,4" data-allows-scrolling="NO" />
         <style type="text/css">
             @font-face { font-family: "Roadgeek2005SeriesD"; src: url("http://panic.com/fonts/Roadgeek 2005 Series D/Roadgeek 2005 Series D.otf"); }
             body, * { }
