--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <h2><span>Productivity Pulse</span></h2>
-<h1><%= pulse %></h1>
+<h1><%= pulse %>%</h1>
 <h2><span>Total Time</span></h2>
 <h1><%= hours %></h1>
