--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,16 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
-    <meta http-equiv="Cache-control" content="no-cache" />
-    <meta application-name="<%= settings.title %>" data-allows-resizing="NO" data-default-size="4,4" data-allows-scrolling="NO" />
-
+  <meta charset="utf-8" />
+  <meta name="ROBOTS" content="NOODP" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta http-equiv="Cache-control" content="no-cache" />
+  <meta application-name="<%= settings.title %>" data-allows-resizing="NO" data-default-size="4,4" data-allows-scrolling="NO" />
 </head>
-    <body>
-        <div id="main">
-            <div id="container">
-              <%= yield %>
-           </div>
-        </div>
-    </body>
+<body>
+  <div id="main">
+    <div id="container">
+      <%= yield %>
+    </div>
+  </div>
+</body>
 </html>
